--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="./public/Artboard_3.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
@@ -10,8 +11,13 @@
         padding: 0;
         font-family: "Open Sans", sans-serif;
       }
+
+      ::selection {
+        background: #80ad3e;
+        color: #fff;
+      }
     </style>
-    <title>ORGANI</title>
+    <title>OGANI</title>
   </head>
   <body>
     <div id="root"></div>
